# libsgdp4

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
include/sgdp4/: sgdp4.h
include/sigutils/: types.h
src/: coord.c  deep.c  predict.c  sgdp4.c  tle.c
